# ServiceDeskPlus-GPT-MCPs

./: .env.example  .gitignore  Agent.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sdp_client.py  server.py  setup.sh  tools_schema.py
docs/: guia_implementacion.md  plan_desarrollo_mcp.md  tareas_desarrollo_mcp.md
infra/: Dockerfile  k8s-deployment.yaml
tests/integration/: test_api.py
